[tool.poetry]
name = "ttweb"
version = "0.1.0"
description = ""
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT"

[tool.poetry.scripts]
hello = 'ttweb:run'

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
